--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,3 +18,8 @@ body,html{width:100%;height:100%}body{font-family:Muli,Helvetica,Arial,sans-seri
     background: url(https://blackrockdigital.github.io/startbootstrap-new-age/img/bg-pattern.png),linear-gradient(to left,#7b4397,#dc2430);
 
 }
+li.nav-item.mr-3.btn-signin {
+    border: solid 1px #ccc;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
